[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/enviroment/space1_enviroment.tres" type="Environment" id=1]
[ext_resource path="res://assets/resources/fonts/Exo2-Light.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/resources/fonts/Exo2-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://screens/story_screen.gd" type="Script" id=4]
[ext_resource path="res://assets/resources/textures/hud/messages_panel.png" type="Texture" id=5]
[ext_resource path="res://assets/scripts/hud/animated_message_label.gd" type="Script" id=6]
[ext_resource path="res://assets/PressSpaceToSkeep.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/scripts/hud_controllers/messages_queue_controller.gd" type="Script" id=8]
[ext_resource path="res://assets/resources/textures/hud/press_arrow.png" type="Texture" id=9]
[ext_resource path="res://assets/resources/fonts/Exo2-ThinItalic.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
resource_name = "complete_hide"
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect/TextureRect:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.8, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect/TextureRect:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.01, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.8, 1 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect/TextureRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttentionLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MessageLabel:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MessageLabel:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.3
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect/TextureRect:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect/TextureRect:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.01, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect/TextureRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttentionLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MessageLabel:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
length = 3.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("AttentionLabel:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("AttentionLabel:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("AttentionLabel:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("AttentionLabel:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("AttentionLabel:rect_scale:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("AttentionLabel:rect_scale:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("ColorRect:modulate:r")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6, 35.2, 36 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("ColorRect:modulate:g")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6, 35.2, 36 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("ColorRect:modulate:b")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6, 35.2, 36 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("ColorRect:modulate:a")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6, 35.2, 36 )
}
tracks/10/type = "value"
tracks/10/path = NodePath("MessageLabel:text")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 3.2, 10, 14.8, 18.1, 24, 31 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "Мы обнаружили что на ряд звёздных систем, где расположены наши колонии, направляются потоки огромных астероидов", "Ваша миссия — уберечь планеты наших звёздных систем от попадания астероидов", "Для этого мы разработали специальное устройство", "Оно позволить вам двигать нужные вам планеты в выбранном направлении с увеличенной скоростью", "Через экран вы сможете наблюдать за звёздной системой, а так же будут отображаться пути, по которым летят астероиды", "Глядите в оба! Мы рассчитываем на вас..." ]
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("MessageLabel:modulate:a")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 32.8, 34.6 )
}
tracks/12/type = "value"
tracks/12/path = NodePath("MessageLabel:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("AttentionLabel:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 1, 1.4, 1.8, 2.2, 2.6, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false ]
}
tracks/14/type = "bezier"
tracks/14/path = NodePath("ColorRect/TextureRect:rect_scale:x")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.6, 0.8, 34.8, 35 )
}
tracks/15/type = "bezier"
tracks/15/path = NodePath("ColorRect/TextureRect:rect_scale:y")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"points": PoolRealArray( 0.01, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.01, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.6, 0.8, 34.8, 35 )
}
tracks/16/type = "value"
tracks/16/path = NodePath("ColorRect/TextureRect:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0, 0.6, 34.9, 35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("MessageLabel:message_to_show")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 3.2, 10, 14.8, 18.1, 24, 31 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "Мы обнаружили что на ряд звёздных систем, где расположены наши колонии, направляются потоки огромных астероидов", "Ваша миссия — уберечь планеты наших звёздных систем от попадания астероидов", "Для этого мы разработали специальное устройство", "Оно позволить вам двигать нужные вам планеты в выбранном направлении с увеличенной скоростью", "Через экран вы сможете наблюдать за звёздной системой, а так же будут отображаться пути, по которым летят астероиды", "Глядите в оба! Мы рассчитываем на вас..." ]
}
tracks/18/type = "method"
tracks/18/path = NodePath("MessageLabel")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 3.2, 10, 14.8, 18.1, 24, 31 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "show_text"
}, {
"args": [  ],
"method": "show_text"
}, {
"args": [  ],
"method": "show_text"
}, {
"args": [  ],
"method": "show_text"
}, {
"args": [  ],
"method": "show_text"
}, {
"args": [  ],
"method": "show_text"
} ]
}

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=7]
length = 0.4
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("TextureRect:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -22, -0.1, 0, 0.1, 0, -22, -0.1, 0, 0.1, 0, -22, -0.1, 0, 0.1, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("TextureRect:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -11, -0.1, 0, 0.1, 0, -3, -0.1, 0, 0.1, 0, -11, -0.1, 0, 0.1, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4 )
}

[sub_resource type="DynamicFont" id=8]
size = 25
font_data = ExtResource( 10 )

[node name="StoryScreen" type="Node"]
script = ExtResource( 4 )
next_screen = "res://screens/star_system_screen.tscn"

[node name="Spatial" type="Spatial" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Spatial"]
environment = ExtResource( 1 )

[node name="Camera" type="Camera" parent="Spatial"]
transform = Transform( -0.38072, 0.248928, 0.890554, 0.547242, 0.836975, -1.24719e-08, -0.745371, 0.487349, -0.454877, 0, 0, 0 )
current = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="HUD"]
modulate = Color( 1, 1, 1, 0.943259 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.891144
margin_right = 0.891113
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HUD/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -548.0
margin_top = -314.0
margin_right = 548.0
margin_bottom = 314.0
rect_pivot_offset = Vector2( 548, 314 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/ColorRect/TextureRect"]
modulate = Color( 1, 1, 1, 0.172549 )
margin_left = 762.81
margin_top = 581.959
margin_right = 1063.81
margin_bottom = 601.959
custom_fonts/font = SubResource( 1 )
text = "Чтобы пропустить, удерживайте пробел"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttentionLabel" type="Label" parent="HUD"]
visible = false
anchor_left = 0.500669
anchor_top = 0.5
anchor_right = 0.500669
anchor_bottom = 0.5
margin_left = -319.0
margin_top = -146.0
margin_right = 319.0
margin_bottom = 146.0
rect_pivot_offset = Vector2( 319, 146 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.996078, 0.176471, 0.176471, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "Важное сообщение"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD"]
autoplay = "story"
anims/complete_hide = SubResource( 3 )
anims/hide = SubResource( 4 )
anims/story = SubResource( 5 )

[node name="MessageLabel" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -361.0
margin_top = -183.0
margin_right = 361.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 6 )
text = "Мы обнаружили что на ряд звёздных систем, где расположены наши колонии, направляются потоки огромных астероидов"
valign = 1
autowrap = true
uppercase = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
message_to_show = "Мы обнаружили что на ряд звёздных систем, где расположены наши колонии, направляются потоки огромных астероидов"
show_char_delay = 0.03

[node name="Control" type="Control" parent="HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 160.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HUD/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.0
margin_top = -11.0
margin_right = 22.0
margin_bottom = 11.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/Control"]
autoplay = "idle"
anims/idle = SubResource( 7 )

[node name="Label" type="Label" parent="HUD/Control"]
visible = false
margin_left = -43.4616
margin_top = 13.8657
margin_right = 41.5384
margin_bottom = 44.8657
custom_fonts/font = SubResource( 8 )
text = "Пробел"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressSpaceToSkeep" parent="." instance=ExtResource( 7 )]

[node name="MessagesQueueController" type="Node" parent="."]
script = ExtResource( 8 )
messages = [ "Мы обнаружили что на ряд звёздных систем, где расположены наши колонии, направляются потоки огромных астероидов", "Ваша миссия — уберечь планеты наших звёздных систем от попадания астероидов", "Для этого мы разработали специальное устройство", "Оно позволит вам двигать нужные вам планеты в выбранном направлении с увеличенной скоростью", "Через экран вы сможете наблюдать за звёздной системой, а так же будут отображаться пути, по которым летят астероиды", "Смотрите в оба! Мы рассчитываем на вас…" ]
__messages_label = NodePath("../HUD/MessageLabel")
__press_arrow = NodePath("../HUD/Control")
[connection signal="animation_finished" from="HUD/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="skeep" from="PressSpaceToSkeep" to="." method="_on_PressSpaceToSkeep_skeep"]
[connection signal="messages_ended" from="MessagesQueueController" to="." method="_on_MessagesQueueController_messages_ended"]
